--- a/3.css/landing-page/css/root.css
+++ b/3.css/landing-page/css/root.css
@@ -67,7 +67,7 @@ main span {
   margin-right: auto;
   padding-left: 2rem;
   padding-right: 2rem;
-  max-width: 100%;
+  max-width: 1536px;
 }
 
 h1,
