--- a/3.css/landing-page/css/root.css
+++ b/3.css/landing-page/css/root.css
@@ -32,6 +32,13 @@ main span {
   color: var(--primary-color);
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .btn {
   font-weight: 800;
   background-color: var(--primary-color);
@@ -78,8 +85,8 @@ h3 {
 }
 
 h1 {
-  font-size: 2.75rem;
-  line-height: 2.5rem;
+  font-size: 4rem;
+  line-height: 3.75rem;
 }
 
 h2 {
