--- a/3.css/landing-page/css/root.css
+++ b/3.css/landing-page/css/root.css
@@ -18,6 +18,7 @@ body {
   font-weight: 400;
   font-family: "CabinetGrotesk-Variable", "Inter", "Roboto", "Arial",
     "sans-serif";
+  overflow-x: hidden;
 }
 
 main {
