--- a/3.css/landing-page/css/footer.css
+++ b/3.css/landing-page/css/footer.css
@@ -29,3 +29,23 @@ footer .links {
   gap: 2rem;
   margin-right: auto;
 }
+
+@media screen and (max-width: 1280px) {
+  footer .copyright,
+  footer .logo {
+    width: 100%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+
+  footer .social {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  footer .links {
+    flex-direction: column;
+    align-items: start;
+  }
+}
