--- a/3.css/landing-page/css/navbar.css
+++ b/3.css/landing-page/css/navbar.css
@@ -11,16 +11,80 @@ nav {
 
 .navigation {
   display: flex;
+  flex-direction: row;
+  align-items: center;
   padding: 0 20px;
   gap: 1.5rem;
   margin-right: auto;
 }
 
 .navigation > li {
+  transition: color 300ms ease-in;
+  font-weight: 400;
   font-size: 1.25rem;
 }
 
 .navigation > li:hover,
 .navigation > li.active {
   color: var(--primary-color);
+}
+
+.navigation .close {
+  display: none;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  width: 2.125rem;
+  gap: 0.5rem;
+  flex-shrink: 0;
+  margin-left: auto;
+}
+
+.line {
+  height: 0.25rem;
+  width: 100%;
+  background-color: var(--neutral-color);
+  transition: background-color 300ms ease-in;
+  border-radius: 0.5rem;
+}
+
+.hamburger:hover .line {
+  background-color: var(--primary-color);
+}
+
+@media screen and (max-width: 1024px) {
+  header nav .navigation {
+    display: none;
+  }
+
+  header nav .navigation.open {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+    background-color: #000000ea;
+    padding: 7rem 0 1rem;
+  }
+
+  header nav .navigation.open .close {
+    display: flex;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    font-size: 2rem;
+  }
+
+  header nav .btn {
+    display: none;
+  }
+
+  header nav .hamburger {
+    display: flex;
+  }
 }
