--- a/3.css/landing-page/css/root.css
+++ b/3.css/landing-page/css/root.css
@@ -76,7 +76,7 @@ main span {
   margin-right: auto;
   padding-left: 2rem;
   padding-right: 2rem;
-  max-width: 1536px;
+  max-width: 100%;
 }
 
 h1,
@@ -87,18 +87,18 @@ h3 {
 }
 
 h1 {
-  font-size: 4rem;
-  line-height: 3.75rem;
-}
-
-h2 {
   font-size: 2.75rem;
   line-height: 2.5rem;
 }
 
+h2 {
+  font-size: 1.875rem;
+  line-height: 1.75rem;
+}
+
 h3 {
-  font-size: 1.5rem;
-  line-height: 1.875rem;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
 }
 
 h4 {
@@ -169,3 +169,49 @@ h5 {
 /* .tab-pane.active {
   display: block;
 } */
+
+@media screen and (max-width: 768px) {
+  .tabs {
+    gap: 1rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  h1 {
+    font-size: 3.5rem;
+    line-height: 3.25rem;
+  }
+  h2 {
+    font-size: 2rem;
+    line-height: 1.75rem;
+  }
+  h3 {
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+  h1 {
+    font-size: 4rem;
+    line-height: 3.75rem;
+  }
+  h2 {
+    font-size: 2.75rem;
+    line-height: 2.5rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+    line-height: 1.875rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
