--- a/3.css/landing-page/css/services.css
+++ b/3.css/landing-page/css/services.css
@@ -49,3 +49,14 @@
   background-color: var(--base-color);
   color: var(--neutral-color);
 }
+
+@media screen and (max-width: 1280px) {
+  #services ul {
+    grid-template-columns: repeat(2, minmax(360px, 1fr));
+  }
+}
+@media screen and (max-width: 768px) {
+  #services ul {
+    grid-template-columns: repeat(1, minmax(360px, 1fr));
+  }
+}
