--- a/11.express/first-express-ejs/views/about.ejs
+++ b/11.express/first-express-ejs/views/about.ejs
@@ -6,10 +6,10 @@
     <title>About Page</title>
   </head>
   <body>
-     <main>
-        <h1>About me</h1>
-        <h2>${user.firstName} ${user.lastName}</h2>
-        <p>My note is: ${user.note}</p>
+    <main>
+      <h1>About me</h1>
+      <h2><%= user.firstName %> <%= user.lastName %></h2>
+      <p>My note is: <%= user.note %></p>
     </main>
   </body>
 </html>
