--- a/11.express/first-express-ejs/views/about.ejs
+++ b/11.express/first-express-ejs/views/about.ejs
@@ -10,6 +10,22 @@
       <h1>About me</h1>
       <h2><%= user.firstName %> <%= user.lastName %></h2>
       <p>My note is: <%= user.note %></p>
+      <p>
+        	<% if(user.note>10){%>
+<!--  -->
+                            Congratulations
+                            <!--  -->
+                            				<% }else{ %>
+Rot treviser
+				<% }%>
+
+      </p>
+      <ul>
+        <% user.skills.forEach((skill)=>{ %>
+             <%- include("components/card", {skill}) %>
+		<% }) %>
+
+      </ul>
     </main>
   </body>
 </html>
